@@ -20,11 +20,10 @@
 	</upstream>
 	<use>
 		<flag name="acroread">Depend on acroread (otherwise you are responsible to install/configure a pdf viewer)</flag>
-		<flag name="firefox">Depend on firefox browser (without a browser useflag you are responsible to install and configure a browser)</flag>
-		<flag name="icecat">Depend on icecat browser</flag>
-		<flag name="konqueror">Depend on konqueror browser</flag>
+		<flag name="icecat">Depend on icecat browser instead of firefox</flag>
+		<flag name="konqueror">Depend on konqueror browser instead of firefox</flag>
 		<flag name="postgres">Use postgresql instead of sqlite</flag>
-		<flag name="seamonkey">Depend on seamonkey browser</flag>
+		<flag name="seamonkey">Depend on seamonkey browser instead of firefox</flag>
 		<flag name="pngcrush">Use pngcrush for opimizing png before installation</flag>
 	</use>
 </pkgmetadata>
